--- a/Interfaces/primera/index.html
+++ b/Interfaces/primera/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../primera/indexcss/fontello.css">
     <link rel="stylesheet" href="../primera/indexcss/estiloindex.css">
+    <link rel="stylesheet" href="../primera/indexcss/menu.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<<device-width>>, initial-scale=1.0">
-    <title>Document</title>
+    <title>SRA</title>
 </head>
 <body>
-        <a href="../reloj/reloj.html" class="button-regis"><img src="../img/registro.png" class="regi"></a>
-        <a href="../login empleado/lgemp.html" class="button-emp"><img src="../img/personal.png" class="emp"></a>
-        <a href="../login administrador/lgadmin.html" class="button-admin"><img src="../img/administrador.png" class="admi"></a>
-</body>
+    <header>
+        <div class="contenedor">
+        <h1> Hotel Xic Xanac </h1>
+        <input type="checkbox" id="menu-bar">
+        <label class="icon-menu" for="menu-bar"></label>
+            <nav class="menu">
+                <a href="">Ayuda</a>
+                <a href="">Contacto</a>
+                <a href="../primera/index.html">Salir</a>
+            </nav>
+        </div>
+</header>
+    <div class="menu-elegir">
+        <a href="../reloj/reloj.html" /*class="button-regis"*/><img src="../img/registro.png" class="regi"></a>
+        <a href="../login empleado/lgemp.html" /*class="button-emp"*/><img src="../img/personal.png" class="emp"></a>
+        <a href="../login administrador/lgadmin.html" /*class="button-admin"*/><img src="../img/administrador.png" class="admi"></a>
+    </div>
+    </body>
 </html>
