--- a/Interfaces/reloj/reloj.html
+++ b/Interfaces/reloj/reloj.html
@@ -6,69 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../reloj/reloj.css/reloj.css">
     <link rel="stylesheet" href="../reloj/reloj.css/fontello.css">
+    <link rel="stylesheet" href="../reloj/reloj.css/menu.css">
+    <link rel="stylesheet" href="../reloj/reloj.css/estilo.css">
+    <link rel="stylesheet" href="../reloj/reloj.css/master.css">
+    <script type="text/javascript" src="../reloj/js/reloj.js"></script>
     <!--esto es opcional son las fuentes de google que boy a utilizar -->
     <link href="https://fonts.googleapis.com/css?family=Bellota&display=swap" rel="stylesheet">
+    <title>Asistencia</title>
 </head>
 <!--ejecutamo la funcion startTime() cuando se carge la pagina-->
 
 <body onload="startTime()">
-
+    <header>
+        <div class="contenedor">
+        <h1> Hotel Xic Xanac </h1>
+        <input type="checkbox" id="menu-bar">
+        <label class="icon-menu" for="menu-bar"></label>
+            <nav class="menu">
+              <a href="">Ayuda</a>
+              <a href="">Contacto</a>
+              <a href="../primera/index.html">Salir</a>
+            </nav>
+        </div>
+    </header>
+    <br>
+        <div class="cod-empleado">
+            <label for="cod-empleado">Código empleado</label>
+            <input type="text" name="CodEmpleado" placeholder="Ingrese el código">
+            </div>
+            <br>
     <div class="clockdate">
         <span id="time"></span>
         <span id="date"></span>
     </div>
-    <div class="codempleado">
-    <center><label for="codempleado">Código empleado</label>
-    <input type="text" name="CodEmpleado"placeholder="Ingrese el código">
-    </center>
-    </div>
-
-    <script>
-        function startTime() {
-            //declaramos las  variables que nos proporcionaran los datos como la hora, minutos etc.
-
-            var today = new Date(),
-                hours = today.getHours(),
-                minutes = today.getMinutes(),
-                date = today.getDate(),
-                day = today.getDay(),
-                month = today.getMonth();
-
-            //utilizaremos operadores ternarios esto nos ayudara a mostrar la hora solo del 1 al 12
-            hours = (hours == 0) ? 12 : hours;
-            hours = (hours > 12) ? hours - 12 : hours;
-
-            //pasaremos las horas y minutos a una funcion que crearemos mas adelante
-            hours = checkTime(hours);
-            minutes = checkTime(minutes);
-
-            //primero para los dias y meses crearemos un arreglo esto por que la funcion que nos debuelve
-            //los dias y meses nos los debuelbe en numero
-            var dia = ["Domingo", " Lunes", "Martes", "Miercoles", "Jueves", "viernes", "Sabado"],
-                mes = ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"];
-            //haora solo imprimimos los datos
-            var hr = document.getElementById('time').innerHTML = hours + ":" + minutes,
-                dt = document.getElementById('date').innerHTML = dia[day] + ", " + date + " De " + mes[month];
-
-            //esta funcion hara que nuestro escript se ejecute constantemente
-            var time = setTimeout(function() {
-                startTime();
-            }, 500);
-
-
-
-
-        }
-        //solo falta crear la funcion que nos diga si tine uno o dos dijitos
-        //esto para que si solo tiene uno le agrege u  cero a la izquierda
-        function checkTime(e) {
-            if (e < 10) {
-                e = "0" + e;
-            }
-            return e;
-        }
-    </script>
-
+    <br>
+    <div class="accion" >
+        <input type="submit" value="Registrar Entrada">
+        <input type="submit" value="Registrar Salida">
+        </div>
 </body>
-
 </html>
