--- a/Interfaces/recuppassemp/recuppassaemp.html
+++ b/Interfaces/recuppassemp/recuppassaemp.html
@@ -14,8 +14,9 @@
             <input type="checkbox" id="menu-bar">
             <label class="icon-menu" for="menu-bar"></label>
                 <nav class="menu">
-                <a href="">Ayuda</a>
-                <a href="">Contacto</a>
+                    <a href="">Ayuda</a>
+                    <a href="">Contacto</a>
+                    <a href="../primera/index.html">Salir</a>
                 </nav>
             </div>
     </header>
@@ -28,6 +29,9 @@
       <br>
       <br>
       <h2>Recuperar Contraseña</h2>
+      <!-- USER INPUT -->
+      <label for="text">Usuario</label>
+      <input type="text" name="usuario"placeholder="Usuario">
         <!-- PASSWORD INPUT -->
        <label for="passnew">Contraseña Nueva</label>
         <input type="password" name="passnew"placeholder="Nueva contraseña">
