--- a/Interfaces/recuppassemp/recuppassaemp.html
+++ b/Interfaces/recuppassemp/recuppassaemp.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../recuppassemp/recuppassemp.css/estilo.css">
         <link rel="stylesheet" href="../recuppassemp/recuppassemp.css/menu.css">
         <link rel="stylesheet" href="../recuppassemp/recuppassemp.css/master.css">
+        <script src="recuperarempleados.js"></script>
     </head>
     <body>
         <header>
@@ -29,18 +30,20 @@
       <br>
       <br>
       <h2>Recuperar Contraseña</h2>
+      <form id="FormularioContra">
       <!-- USER INPUT -->
       <label for="text">Usuario</label>
-      <input type="text" name="usuario"placeholder="Usuario">
+      <input type="text" name="usuario" placeholder="Usuario" id="usuarios">
         <!-- PASSWORD INPUT -->
        <label for="passnew">Contraseña Nueva</label>
-        <input type="password" name="passnew"placeholder="Nueva contraseña">
+        <input type="password" name="passnew"placeholder="Nueva contraseña" id="contra" required>
         <!-- PASSWORD INPUT -->
         <label for="passconf">Confirme Contraseña</label>
-        <input type="password" name="passconfi" placeholder="Confirme contraseña">
+        <input type="password" name="passconfi" placeholder="Confirme contraseña" id="contraNueva" required>
           
         <input type="submit" value="Aceptar">
         <input type="submit" value="Cancelar">
+        </form>
     </div>   
     </body>
 </html>
