--- a/Interfaces/login empleado/lgemp.html
+++ b/Interfaces/login empleado/lgemp.html
@@ -38,7 +38,7 @@
         <input  id="passwords" type="password" name="pass" placeholder="Ingrese Contraseña" required>
           
         <input type="submit" value="Aceptar">
-        <center><a href="#">¿Perdiste tu contraseña?</a><br></center>
+        <center><a href="../recuppassemp/recuppassaemp.html">¿Perdiste tu contraseña?</a><br></center>
       </form>
     </div> 
   
