--- a/Interfaces/recuppassadmin/recuppassadmin.html
+++ b/Interfaces/recuppassadmin/recuppassadmin.html
@@ -31,17 +31,19 @@
       <br>
       <h2>Recuperar Contraseña</h2>
       <!-- USER INPUT -->
+      <form id="FormularioAdmin">
       <label for="text">Usuario</label>
-      <input type="text" name="usuario"placeholder="Usuario">
+      <input  id="UserAdmin"  type="text" name="usuario"placeholder="Usuario" required>
         <!-- PASSWORD INPUT -->
        <label for="passnew">Contraseña Nueva</label>
-        <input type="password" name="passnew"placeholder="Nueva contraseña">
+        <input id="PassAdmin" type="password" name="passnew"placeholder="Nueva contraseña" required>
         <!-- PASSWORD INPUT -->
         <label for="passconf">Confirme Contraseña</label>
-        <input type="password" name="passconfi" placeholder="Confirme contraseña">
+        <input  id="PassAdminRe" type="password" name="passconfi" placeholder="Confirme contraseña" required>
           
         <input type="submit" value="Aceptar">
         <input type="submit" value="Cancelar">
+      </form>
     </div>   
     </body>
 </html>
