Subiendo botones y recuperaciones

--- a/Interfaces/login administrador/lgadmin.html
+++ b/Interfaces/login administrador/lgadmin.html
@@ -24,7 +24,6 @@
 <h3 id="UsuarioCorrecto" 
 style="text-align: center;font-size:x-large; font-family: fantasy;left:50 em;color:rgb(255, 255, 255);" >   </h3>
  </div>
-
         <br>
         <br>
         <br>
@@ -42,7 +41,10 @@ style="text-align: center;font-size:x-large; font-family: fantasy;left:50 em;col
         <input  id="passAdmin" type="password" name="pass" placeholder="Ingrese Contraseña" required>
           
         <input type="submit" value="Aceptar">
-        <center><a href="C:\Users\PC\Documents\interfaces\Administracion\Interfaces\recuppassadmin.html">¿Perdiste tu contraseña?</a><br></center>
+        <input type="submit" value="Cancelar" onclick="regresarindex()">
+        <br>
+        <br>
+        <center><a href="../recuppassadmin/recuppassadmin.html">¿Perdiste tu contraseña?</a><br></center>
       </form>
     </div>   
     </body>
