--- a/Interfaces/login empleado/lgemp.html
+++ b/Interfaces/login empleado/lgemp.html
@@ -18,6 +18,7 @@
                 <nav class="menu">
                 <a href="">Ayuda</a>
                 <a href="">Contacto</a>
+
                 </nav>
             </div>
     </header>
@@ -38,6 +39,9 @@
         <input  id="passwords" type="password" name="pass" placeholder="Ingrese Contraseña" required>
           
         <input type="submit" value="Aceptar">
+        <input type="submit" value="Cancelar" onclick="regresarindex()">
+        <br>
+        <br>
         <center><a href="../recuppassemp/recuppassaemp.html">¿Perdiste tu contraseña?</a><br></center>
       </form>
     </div> 
