--- a/Interfaces/recuppassemp/recuppassaemp.html
+++ b/Interfaces/recuppassemp/recuppassaemp.html
@@ -42,7 +42,7 @@
         <input type="password" name="passconfi" placeholder="Confirme contraseña" id="contraNueva" required>
           
         <input type="submit" value="Aceptar">
-        <input type="submit" value="Cancelar"   >
+        <input type="submit" value="Cancelar" onclick="regresarindex()"  >
         </form>
     </div>   
     </body>
